// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Modal should match spanshot with modal close 1`] = `
<Modal
  close={[Function]}
  isOpen={false}
  isScrollable={true}
  shouldCloseOnClickOutside={false}
>
  <ModalContent
    maxWidth="50vw"
    titleText=""
  >
    <Col
      backgroundColor="neutral0"
      width="100%"
    >
      <Col
        alignItems="flex-end"
        width="100%"
      >
        <Row
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <IconCross
            color="#1768C9"
            display="block"
            size={32}
            title="Close Modal"
          />
        </Row>
      </Col>
      <Col
        width="100%"
      >
        <div>
          Child props
        </div>
      </Col>
    </Col>
  </ModalContent>
</Modal>
`;

exports[`Custom Modal should match spnashot with modal open 1`] = `
<Modal
  close={[Function]}
  isOpen={true}
  isScrollable={true}
  shouldCloseOnClickOutside={false}
>
  <ModalContent
    maxWidth="50vw"
    titleText=""
  >
    <Col
      backgroundColor="neutral0"
      width="100%"
    >
      <Col
        alignItems="flex-end"
        width="100%"
      >
        <Row
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <IconCross
            color="#1768C9"
            display="block"
            size={32}
            title="Close Modal"
          />
        </Row>
      </Col>
      <Col
        width="100%"
      >
        <div>
          Child props
        </div>
      </Col>
    </Col>
  </ModalContent>
</Modal>
`;
